<?xml version="1.0" encoding="utf-8"?>
<resources>

    //login.xml
    <string name="app_name">DiabetesBuddy</string>
    <string name="hello_world">Hello new world!</string>
    <string name="action_settings">Settings</string>

    //registrierung.xml
    <string name="maleCheckBox">M</string>
    <string name="femaleCheckBox">W</string>



    // welcome.xml
    <string name="username"></string>
    <string name="welcomeText">"Ich bin SuperMonkey, dein DiabetesBuddy und werde dich ab jetzt jeden Tag begleiten.
Ich kann dir Spiele erklären und dir beim Eintragen deiner Blutzuckerwerte helfen.
Viel Spass!"</string>

    //home.xml
    <string name="homeButton1">Blutzucker und Essen eintragen</string>
    <string name="homeButton2">Spielen und Lernen</string>
    <string name="homeButton3">Einstellungen</string>
    <string name="homeButton4">Shop</string>


    //spielen_lernen.xml
    <string name="spiel1">BE Wert schätzen</string>
    <string name="spiel2">Diabetes Quiz</string>
    <string name="spielLernenTitel">Spielen und Lernen</string>
    <string name="spielLernenInhalt">Im Spiel Diabetes Quiz lernst du allgemeine Informationen rund um Diabetes und beim BE Wert schätzen findest du heraus wieviele
Broteinheiten in bestimmten Nahrungsmitteln stecken!</string>

    <string name="logoutButton">Logout</string>

    //shop.xml
    <string name="shopTitel">Banana Shop</string>
    <string name="anzahlBananen">12</string>
    <string name="shopDuHast">Du Hast:</string>
    <string name="preisSkate">5</string>
    <string name="preisZufall">10</string>
    <string name="inBesitz">In Besitz</string>


    <string name="beTitel">BE Wert schätzen</string>

    //quiz.xm
    <string name="quizzFrage">Welches Organ produziert Insulin?</string>




    <string-array name="essen1_arrays">
        <item>Getränk</item>
        <item>Obst und Gemüse</item>
    </string-array>

    <string-array name="tageszeit_arrays">
        <item>Morgen</item>
        <item>Mittag</item>
        <item>Abend</item>
    </string-array>


</resources>
