<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homeScreen"
    android:background="@drawable/dschungel">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView2"
        android:src="@drawable/buddy_haare"
        android:layout_above="@+id/homeButton1"
        android:layout_toLeftOf="@+id/logoutButton"
        android:layout_toStartOf="@+id/logoutButton" />


    <Button
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="Blutzucker Tagebuch"
        android:id="@+id/homeButton1"
        android:background="@drawable/button"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_above="@+id/homeButton2"
        android:layout_alignLeft="@+id/homeButton2"
        android:layout_alignStart="@+id/homeButton2"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="15dp" />

    <Button
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/homeButton2"
        android:id="@+id/homeButton2"
        android:focusable="false"
        android:background="@drawable/button"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:layout_above="@+id/homeButton3"
        android:layout_alignLeft="@+id/homeButton3"
        android:layout_alignStart="@+id/homeButton3"
        android:layout_marginBottom="15dp" />


    <Button
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/homeButton4"
        android:id="@+id/homeButton3"
        android:focusable="false"
        android:background="@drawable/button"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:layout_marginBottom="96dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="120dp"
        android:layout_height="33dp"
        android:text="@string/logoutButton"
        android:id="@+id/logoutButton"
        android:background="@drawable/button"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" />



</RelativeLayout>