<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/dschungel"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/shopTitel"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:baselineAligned="false"
        android:background="@drawable/border"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/shopDuHast"
            android:id="@+id/textView4"
            android:gravity="center_vertical"
            android:layout_weight="0.51" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/anzahlBananen"
            android:id="@+id/anzahlBananas"
            android:gravity="center"
            android:layout_weight="0.14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Bananen"
            android:id="@+id/textView5"
            android:gravity="center_vertical"
            android:layout_weight="0.61" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageView"
            android:src="@drawable/banana" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:id="@+id/shoplist">

            <com.example.pzehnder.diabetesbuddy.ShopCompWidget
                android:id="@+id/shopcomp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </com.example.pzehnder.diabetesbuddy.ShopCompWidget>

            <com.example.pzehnder.diabetesbuddy.ShopCompWidget
                android:id="@+id/shopcomp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </com.example.pzehnder.diabetesbuddy.ShopCompWidget>
            <com.example.pzehnder.diabetesbuddy.ShopCompWidget
                android:id="@+id/shopcomp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </com.example.pzehnder.diabetesbuddy.ShopCompWidget>

        </LinearLayout>
    </ScrollView>


</LinearLayout>